Added more error handling + lights control + preferences activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">PhilipsHue</string>
     <string name="colorpicker_activity">Colorpicker</string>
-    <string name="groupsettings_activity">Settings</string>
+    <string name="groupsettings_activity">Group Settings</string>
+    <string name="lightsettings_activity">Light Settings</string>
+    <string name="preferences_activity">App Settings</string>
 </resources>
